# code-review-agent

./: .gitignore  README.md  README_EN.md  code_review_agent.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/code_review_agent/: __init__.py  agent.py  cli.py  constants.py  gitignore.py  progress.py  state.py
src/code_review_agent/llm/: __init__.py  base.py  claude_agent.py  gemini_agent.py
tests/: test_agent.py  test_e2e.py  test_gitignore.py
