[project]
name = "code-review-agent"
version = "0.3.0"
description = "Intelligent code review tool supporting Claude and Gemini"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.18",
    "pathspec>=1.0.0",
    "aiofiles>=24.1.0",
    "click>=8.3.1",
]

[project.scripts]
code-review = "code_review_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_review_agent"]
